; ModuleID = '/home/carl/AnghaBench/h2o/deps/picotls/lib/extr_picotls.c_select_key_share.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/picotls/lib/extr_picotls.c_select_key_share.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@PTLS_ALERT_ILLEGAL_PARAMETER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__**, i32*, %struct.TYPE_4__**, i32**, i32*, i32)* @select_key_share to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @select_key_share(%struct.TYPE_4__** %0, i32* %1, %struct.TYPE_4__** %2, i32** %3, i32* %4, i32 %5) #0 {
  %7 = alloca %struct.TYPE_4__**, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.TYPE_4__**, align 8
  %10 = alloca i32**, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i64, align 8
  %15 = alloca i32, align 4
  %16 = alloca %struct.TYPE_4__**, align 8
  store %struct.TYPE_4__** %0, %struct.TYPE_4__*** %7, align 8
  store i32* %1, i32** %8, align 8
  store %struct.TYPE_4__** %2, %struct.TYPE_4__*** %9, align 8
  store i32** %3, i32*** %10, align 8
  store i32* %4, i32** %11, align 8
  store i32 %5, i32* %12, align 4
  %17 = load %struct.TYPE_4__**, %struct.TYPE_4__*** %7, align 8
  store %struct.TYPE_4__* null, %struct.TYPE_4__** %17, align 8
  %18 = load i32, i32* %12, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %27

20:                                               ; preds = %6
  %21 = load i32**, i32*** %10, align 8
  %22 = load i32*, i32** %21, align 8
  %23 = load i32*, i32** %11, align 8
  %24 = icmp eq i32* %22, %23
  br i1 %24, label %25, label %27

25:                                               ; preds = %20
  %26 = load i32, i32* @PTLS_ALERT_ILLEGAL_PARAMETER, align 4
  store i32 %26, i32* %13, align 4
  br label %80

27:                                               ; preds = %20, %6
  br label %28

28:                                               ; preds = %78, %27
  %29 = load i32**, i32*** %10, align 8
  %30 = load i32*, i32** %29, align 8
  %31 = load i32*, i32** %11, align 8
  %32 = icmp ne i32* %30, %31
  br i1 %32, label %33, label %79

33:                                               ; preds = %28
  %34 = load i32**, i32*** %10, align 8
  %35 = load i32*, i32** %11, align 8
  %36 = call i32 @decode_key_share_entry(i64* %14, i32* %15, i32** %34, i32* %35)
  store i32 %36, i32* %13, align 4
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %38, label %39

38:                                               ; preds = %33
  br label %80

39:                                               ; preds = %33
  %40 = load %struct.TYPE_4__**, %struct.TYPE_4__*** %9, align 8
  store %struct.TYPE_4__** %40, %struct.TYPE_4__*** %16, align 8
  br label %41

41:                                               ; preds = %63, %39
  %42 = load %struct.TYPE_4__**, %struct.TYPE_4__*** %16, align 8
  %43 = load %struct.TYPE_4__*, %struct.TYPE_4__** %42, align 8
  %44 = icmp ne %struct.TYPE_4__* %43, null
  br i1 %44, label %45, label %66

45:                                               ; preds = %41
  %46 = load %struct.TYPE_4__**, %struct.TYPE_4__*** %7, align 8
  %47 = load %struct.TYPE_4__*, %struct.TYPE_4__** %46, align 8
  %48 = icmp eq %struct.TYPE_4__* %47, null
  br i1 %48, label %49, label %62

49:                                               ; preds = %45
  %50 = load %struct.TYPE_4__**, %struct.TYPE_4__*** %16, align 8
  %51 = load %struct.TYPE_4__*, %struct.TYPE_4__** %50, align 8
  %52 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %51, i32 0, i32 0
  %53 = load i64, i64* %52, align 8
  %54 = load i64, i64* %14, align 8
  %55 = icmp eq i64 %53, %54
  br i1 %55, label %56, label %62

56:                                               ; preds = %49
  %57 = load %struct.TYPE_4__**, %struct.TYPE_4__*** %16, align 8
  %58 = load %struct.TYPE_4__*, %struct.TYPE_4__** %57, align 8
  %59 = load %struct.TYPE_4__**, %struct.TYPE_4__*** %7, align 8
  store %struct.TYPE_4__* %58, %struct.TYPE_4__** %59, align 8
  %60 = load i32, i32* %15, align 4
  %61 = load i32*, i32** %8, align 8
  store i32 %60, i32* %61, align 4
  br label %62

62:                                               ; preds = %56, %49, %45
  br label %63

63:                                               ; preds = %62
  %64 = load %struct.TYPE_4__**, %struct.TYPE_4__*** %16, align 8
  %65 = getelementptr inbounds %struct.TYPE_4__*, %struct.TYPE_4__** %64, i32 1
  store %struct.TYPE_4__** %65, %struct.TYPE_4__*** %16, align 8
  br label %41

66:                                               ; preds = %41
  %67 = load i32, i32* %12, align 4
  %68 = icmp ne i32 %67, 0
  br i1 %68, label %69, label %78

69:                                               ; preds = %66
  %70 = load %struct.TYPE_4__**, %struct.TYPE_4__*** %7, align 8
  %71 = load %struct.TYPE_4__*, %struct.TYPE_4__** %70, align 8
  %72 = icmp ne %struct.TYPE_4__* %71, null
  br i1 %72, label %73, label %74

73:                                               ; preds = %69
  br label %76

74:                                               ; preds = %69
  %75 = load i32, i32* @PTLS_ALERT_ILLEGAL_PARAMETER, align 4
  br label %76

76:                                               ; preds = %74, %73
  %77 = phi i32 [ 0, %73 ], [ %75, %74 ]
  store i32 %77, i32* %13, align 4
  br label %80

78:                                               ; preds = %66
  br label %28

79:                                               ; preds = %28
  store i32 0, i32* %13, align 4
  br label %80

80:                                               ; preds = %79, %76, %38, %25
  %81 = load i32, i32* %13, align 4
  ret i32 %81
}

declare dso_local i32 @decode_key_share_entry(i64*, i32*, i32**, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
